--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.19.4",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -44,7 +45,7 @@
     "lucide-react": "^0.485.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.1",
-    "next": "14.2.15",
+    "next": "^14.2.25",
     "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
